# fatrop

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  FindMUMPS.cmake  LICENSE  LICENSE.txt  ListOfTodos.txt  MVTranslator.py  PILOT_USER_INSTRUCTIONS.md  README.md  UTILS.md  compilation_instructions.md  f.c  fatrop_casadi_cookbook.html  genindex.html  getting_started.html  index.html  index.md  index2.md  installation.html  objects.inv  search.html  searchindex.js
docs/: CMakeLists.txt  Doxyfile.in  conf.py  fatrop_casadi_cookbook.rst  getting_started.rst  index.rst  installation.rst  problem_class.tex
examples/: CMakeLists.txt  InvTrajGen.cpp  LinearAlgebraExample.cpp  OCPBasicAlg.cpp  OCPBasicAlgQP.cpp  OCPBasicExample.cpp  OCPExample.cpp  RandomOCPExample.cpp  SparseExample.cpp  matrix_vector_example.cpp  ocp_impl_example.cpp  ocp_impl_example_opti.py  ocp_impl_example_static.cpp  ocp_quadrotor_example.py  pnp_lie_example.cpp  quadrotor_lie_model.hpp  quaternion_lie_example.cpp  quaternion_lie_multistep_example.cpp  so3_helpers.hpp
examples/casadi/: .gitignore  README.md  ocp_impl_example_codegen.cpp  ocp_impl_example_opti.py  quadrotor_example.py
examples/casadi_codegen/: CMakeLists.txt  casadi_generated.h  generate_casadi.py
examples/dense/: CMakeLists.txt  dense_example.cpp  quaternion_lie_example.cpp  robot_ik_example.cpp
examples/graph/: CMakeLists.txt  graph_example.cpp  graph_slam_example.cpp  slam_helpers.hpp  slam_synthetic_data.hpp
examples/ocp/: CMakeLists.txt  car_reference_tracking_example.py  mehrotra_qp_example.cpp  ocp_impl_example.cpp  quadrotor_lie_example.cpp  quadrotor_mpc_example.cpp  quadrotor_mpc_visualize.py  quaternion_lie_multistep_example.cpp
fatrop/: CMakeLists.txt  Fatrop.hpp  fatrop.hpp  fatropConfig.cmake.in  filelist.txt
fatrop/alm_solver/: FatropALMAlg.cpp  FatropALMAlg.hpp  FatropALMData.hpp
fatrop/aux/: Aux.cpp  Aux.hpp  Common.cpp  Common.hpp  DynamicLib.cpp  DynamicLib.hpp  FatropOptions.hpp  FatropVector.cpp  FatropVector.hpp  LinearAlgebra.cpp  LinearAlgebra.hpp  SmartPtr.cpp  SmartPtr.hpp  Worker.cpp  Worker.hpp
fatrop/auxiliary/: Common.cpp  Common.hpp  DynamicLib.cpp  DynamicLib.hpp  FatropOptions.hpp  FatropVector.cpp  FatropVector.hpp  LinearAlgebra.cpp  LinearAlgebra.hpp  VectorUtils.cpp  VectorUtils.hpp
fatrop/blasfeo_wrapper/: LinearAlgebraBlasfeo.cpp  LinearAlgebraBlasfeo.hpp  blasfeo_ref.cpp  blasfeo_target.h  kernel_align_x64_packed_LINUX.c  kernel_align_x64_packed_WINDOWS.c  kernel_dgemm_4x4_lib4_packed_LINUX.c  kernel_dgemm_4x4_lib4_packed_WINDOWS.c  kernel_dgemv_4_lib4_packed_LINUX.c  kernel_dgemv_4_lib4_packed_WINDOWS.c  kernel_packed.c  kernel_sgemm_4x4_lib4_packed_LINUX.c  kernel_sgemm_4x4_lib4_packed_WINDOWS.c
fatrop/debug/: FatropDebugTools.cpp  FatropDebugTools.hpp  LinearAlgebraEigen.cpp  LinearAlgebraEigen.hpp  RandomOCP.cpp  RandomOCP.hpp
fatrop/executables/: RunFatrop.cpp
fatrop/function_evaluation/: CasadiCodegen.cpp  CasadiCodegen.hpp  FunctionEvaluation.cpp  FunctionEvaluation.hpp
fatrop/json/: json.cpp  json.h
fatrop/ocp/: BFOCP.cpp  BFOCP.hpp  BFOCPAL.cpp  BFOCPAL.hpp  BFOCPAdapter.cpp  BFOCPAdapter.hpp  BFOCPAdapterAL.cpp  BFOCPAdapterAL.hpp  BFOCPBasic.cpp  BFOCPBasic.hpp  BasicOCPApplication.cpp  BasicOCPApplication.hpp  BasicOCPSamplers.cpp  BasicOCPSamplers.hpp  CInterface.hpp  CasadiCApiUserdataWrap.cpp  CasadiCApiUserdataWrap.hpp  CasadiCApiWrap.cpp  CasadiCApiWrap.cpp.in  CasadiCApiWrap.hpp  Casadi_CApiWrap.cpp  DuInfEvaluator.cpp  DuInfEvaluator.hpp  FatropOCP.cpp  FatropOCP.hpp  FatropOCPAL.hpp  FatropOCPBuilder.cpp  FatropOCPBuilder.hpp  FatropOCPL1.hpp  FatropOCPResto.hpp  LineSearchDDP.cpp  LineSearchDDP.hpp  OCP.cpp  OCP.hpp  OCPAL.hpp  OCPAbstract.cpp  OCPAbstract.hpp  OCPAdapter.cpp  OCPAdapter.hpp  OCPAlgBuilder.hpp  (+35 more)
fatrop/quasi_newton/: bfgs.hpp
fatrop/solver/: AlgBuilder.hpp  AlgStrategy.cpp  AlgStrategy.hpp  AlgorithmQuantities.cpp  AlgorithmQuantities.hpp  FatropAlg.cpp  FatropAlg.hpp  FatropData.cpp  FatropData.hpp  FatropNLPResto.hpp  FatropOptions.cpp  FatropOptions.hpp  FatropParams.cpp  FatropParams.hpp  FatropPrinter.cpp  FatropPrinter.hpp  FatropStats.hpp  Filter.cpp  Filter.hpp  IterationData.cpp  IterationData.hpp  LineSearch.cpp  LineSearch.hpp  NLPL1.hpp  StepAcceptor.cpp  StepAcceptor.hpp
fatrop/sparse/: FatropSparse.cpp  FatropSparse.hpp  Interface.cpp  Interface.hpp  InterfaceMA57.cpp  InterfaceMUMPS.cpp  InterfaceMUMPS.hpp  InterfacePardiso.cpp  SparseOCP.cpp  SparseOCP.hpp
fatrop/spectool/: CMakeLists.txt  TODO.txt  skel.hpp  spectool.hpp
fatrop/templates/: FatropApplication.hpp  FatropNLPAL.hpp  NLPAlg.cpp  NLPAlg.hpp
fatropgen/: README.md  pyproject.toml
fatropgen/examples/: ocp_direct_minimal.py
fatropgen/fatropgen/: __init__.py  ocp_codegen.py  ocp_direct_solver.py  ocp_proxy.py
fatropy/: CMakeLists.txt  Pypicommands.txt  README.md  example.py  fatropy.cpp  fatropy.pxd  fatropy.pyx  pyproject.toml  report.json  setup.cfg  setup.py
fatropy/fatropy/: __init__.py  __init__.pyi  spectool.pyi
fatropy/foobar/: problem_information.h
fatropy/src/: __init__.py  casadi.hpp  expose-spectool.hpp  expose-spectrop.hpp  fatropy.cpp  numpy.hpp  python_func_import.cpp  swig-bind.hpp  (+2 more)
fatropy_old/: LICENSE  Pypicommands.txt  README.md  example.py  pyproject.toml  setup.py
legacy/: CMakeLists.txt
spectool/: CMakeLists.txt  casadi_fe.hpp  casadi_jit.hpp  casadi_jit_cache.hpp  ex_truck_trailer.cpp  example.cpp  fatrop_function.hpp  fatrop_ocp_impl.cpp  fatrop_ocp_impl.hpp  fatrop_solver.cpp  fatrop_solver.hpp  fatrop_ustage_eval_casadi.hpp  integrator-rk4.hpp  ocp.cpp  ocp.hpp  solver.cpp  solver.hpp  spectool.hpp  stage.cpp  ustage.cpp  ustage.hpp  ustage_quanitities.hpp  ustage_quantities.cpp
src/: CMakeLists.txt  CasadiCodegen.cpp  FatropLinearAlgebraBlasfeo.cpp  FatropMemory.cpp  InterfaceMUMPS.cpp  LinearAlgebraBlasfeo.cpp
swig/: BenchmarkAux.i  CMakeLists.txt
test/: CMakeLists.txt  LinearAlgebraTests.cpp
unittest/: CMakeLists.txt  FatropOptionsTests.cpp  random_matrix.hpp
(+576 files in other folders)
