[build-system]
requires = ["setuptools>=61", "wheel", "cython", "numpy>=1.17"]
build-backend = "setuptools.build_meta"

[project]
name = "fatrop"
description = "Fast Trajectory Optimizer"
version = "0.0.1"
readme = "README.md"
authors = [
    { name = "Lander Vanroye", email = "lander.vanroye@kuleuven.be" },
    { name = "Wilm Decre", email = "wilm.decre@kuleuven.be" }
]
requires-python = ">=3.7"