[build-system]
requires = ["pip>=22", "setuptools>=61", "wheel", "cython", "numpy>=1.17", "casadi"]
build-backend = "setuptools.build_meta"

[project]
name = "fatrop"
description = "Fast Trajectory Optimizer"
version = "0.0.11"
readme = "README.md"
authors = [
    { name = "Lander Vanroye", email = "lander.vanroye@kuleuven.be" },
    { name = "Wilm Decre", email = "wilm.decre@kuleuven.be" }
]
requires-python = ">=3.7"
dependencies = ["pip>=22", "numpy>=1.17", "casadi", "matplotlib"]
